Fix. Fixed the alignment of the main content.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Golos Text', sans-serif;
+    box-sizing: border-box;
     /* font-family: 'Open Sans', sans-serif; */
 }
 
@@ -67,12 +68,18 @@ nav ul li button
     
 }
 
+fieldset
+{
+    border: 0;
+}
+
 main{
     /* background-color: aqua; */
     float: left;
     width: 47%;
-    margin:0 55px;
+    margin:0 60px;
     padding: 20px;
+    margin-left: 72px;
 }
 
 main h1{
@@ -86,6 +93,7 @@ main h1{
 .main-heading-highlight{
     background-color: #efff30ff;
     color: #000000;
+    padding: 5px 15px;
 }
 
 main h1 span{
@@ -127,8 +135,9 @@ main ul p{
 
 .main-startNow-button
 {
-    color: #000000;
+    color: #771717;
     background-color: #efff30ff;
+    margin-left: -8px;
 }
 
 main ul li img{
@@ -136,7 +145,7 @@ main ul li img{
     height: 45px;
     width: 45px;
     margin-left: 35px;
-    border: 1px solid #fff;
+    border: 2px solid #000000;
     /* background-color: #fff; */
 }
 
@@ -205,7 +214,6 @@ aside ul li img
     background-color: aqua;
 }
 
-
 footer
 {
     list-style: none;
@@ -251,8 +259,8 @@ footer button
 
 footer img
 {
-    height: 50px;
-    width: 50px;
+    height: 40px;
+    width: 40px;
     border-radius: 50px;
     object-fit: cover;
     border: 1px solid black ;
